edit README and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
-				<h5 class="white-text">Download this portfolio source code <a href="{{ site.data.settings.github }}/thegreyside.github.io" class="black-text">here</a>, it's free!</h5>
+				<h5 class="white-text">This site is generated using <a href="http://jekyllrb.com" class="blue-grey-text lighten-2">Jekyll</a>. Download the source code <a href="{{ site.data.settings.github }}/thegreyside.github.io" class="black-text">here</a> and <a href="https://github.com/thegreyside/materialize_portfolio_jekyll.io" class="black-text">here (the Jekyll version)</a>. It's free!</h5>
 				
 			</div>
 			<div class="col l4 offset-l2 s12">
