edit README and navbar

--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -14,7 +14,7 @@
   <!-- Bootstrap -->
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
   <!-- Google fonts -->
-  <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
    --><!--Custom CSS-->
   <link rel="stylesheet" href="css/cssreset.css">
   <link type="text/css" rel="stylesheet" href="css/home.css">
