--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -14,10 +14,10 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../css/font-awesome.min.css">
   <!-- Google fonts -->
-  <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
    -->
   <!--Import Google Icon Font-->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Custom CSS-->
   <link rel="stylesheet" href="../css/portfolio.css">
   <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
