--- a/_sass/_banner.sass
+++ b/_sass/_banner.sass
@@ -3,6 +3,10 @@
 .brand-logo
 	padding: 0 15px !important
 
+@media screen and (max-width: 400px)
+	.brand-logo
+		font-size: 20px !important
+
 .banner
 	position: fixed
 	top: 0
