--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -100,6 +100,8 @@
     padding-right: 10px
     
 @media screen and (max-width: 767px)
+  .brand-logo
+    font-size: .9em
   .wrapper
     font-size: 0.8em
     margin: 20px 0 0 0
