fix landing page and media screen

--- a/_includes/__skill.html
+++ b/_includes/__skill.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<h4 class="accent-color center-align">Skills</h4>
 		<div class="skill">
-			{% for skill in site.data.portfolio.skills %}
+			{% for skill in site.data.resume.skills %}
 
 			<div class="skill-type">
 				<div class="skill-label">{{ skill.name }}</div>
