--- a/_includes/about-more.html
+++ b/_includes/about-more.html
@@ -2,7 +2,7 @@
 	<div class="modal-content">
 		<h5>THE <strong class="grey-text">GREY </strong>SIDE</h5>
 		<hr>
-		<p>{{ site.data.portfolio.more }}</p>
+		<p>{{ site.data.resume.more }}</p>
 	</div>
 	<div class="modal-footer">
 		<a href="#!" class="modal-action modal-close waves-effect waves-light btn deep-orange lighten-2">Close</a>
