--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 		<div class="summary blue-grey darken-1 white-text">
 			<h5>Summary</h6>
 			<hr>
-			<p class="about">{{ site.data.portfolio.about }}</p>
+			<p class="about">{{ site.data.resume.about }}</p>
 			<p>
 				<button data-target="more" class="waves-effect waves-light btn modal-trigger deep-orange lighten-2">More...</button>
 			</p>
