--- a/_includes/skill.html
+++ b/_includes/skill.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<h6 class="accent-color center-align">Skills</h6>
 		<div class="row skill">
-			{% for skill in site.data.portfolio.skills %}
+			{% for skill in site.data.resume.skills %}
 
 			<div class="col s12 m6 l6 skill-type center-align">
 				<div class="skill-label">{{ skill.name }}</div>
