--- a/_includes/work-detail.html
+++ b/_includes/work-detail.html
@@ -1,4 +1,4 @@
-{% for work in site.data.portfolio.works %}
+{% for work in site.data.resume.works %}
 <section id="detail-{{ forloop.index }}" class="modal modal-fixed-footer">
 	<div class="modal-content">
 		<h5><b>{{ work.title }}</b></h5>
