--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,13 @@
 			<div class="nav-wrapper blue-grey darken-1">
 				<a href="#" class="brand-logo"><span class="deep-orange-text text-lighten-2">{{ site.data.settings.subtitle-1 }}</span> & <span class="grey-text">{{ site.data.settings.subtitle-2 }}</span></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					{% for menu in site.data.portfolio.menus %}
+					{% for menu in site.data.resume.menus %}
 					<li><a href="{{ menu.url }}">{{ menu.name }}</a>
 					</li>
 					{% endfor %}
 				</ul>
 				<ul id="slide-out" class="side-nav">
-					{% for menu in site.data.portfolio.menus %}
+					{% for menu in site.data.resume.menus %}
 					<li><a href="{{ menu.url }}">{{ menu.name }}</a>
 					</li>
 					{% endfor %}
