--- a/_includes/work.html
+++ b/_includes/work.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<h6 class="accent-color center-align">Works</h6>
 		<div class="row">
-			{% for work in site.data.portfolio.works %}
+			{% for work in site.data.resume.works %}
 			<div class="col s12 m6 l4">
 				<div class="card small lighten-2 white-text alt-color-{{ forloop.index }} modal-trigger" data-target="detail-{{ forloop.index }}">
 					<div class="card-image work-{{ forloop.index }}">
