--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -9,7 +9,7 @@
   <meta rel="author" href="{{ site.data.settings.seo.rel-author }}">
   <meta rel="publisher" href="{{ site.data.settings.seo.rel-publisher }}">
 
-  <title>{{ site.data.settings.title }} - {{ site.data.settings.subtitle }}</title>
+  <title>{{ site.data.settings.title }} | Welcome to my landing page</title>
 
   <!-- Bootstrap -->
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
@@ -17,8 +17,8 @@
   <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
    --><!--Custom CSS-->
   <link rel="stylesheet" href="css/cssreset.css">
-  <link type="text/css" rel="stylesheet" href="css/home.css">
-
+  <link type="text/css" rel="stylesheet" href="css/landpage.css">
+  
   <!--CSS PrefixFree (download from http://http://leaverou.github.io/prefixfree/)-->
   <!--<script src="js/prefixfree.min.js"></script>-->
 
