--- a/_includes/work.html
+++ b/_includes/work.html
@@ -3,14 +3,16 @@
 		<h6 class="accent-color center-align">Works</h6>
 		<div class="row">
 			{% for work in site.data.resume.works %}
-			<div class="col s12 m6 l4">
-				<div class="card small lighten-2 white-text alt-color-{{ forloop.index }} modal-trigger" data-target="detail-{{ forloop.index }}">
+				{% if forloop.first %}
+			<div class="col s12 m6 l8">
+				<!-- I thought it would be nice with different color for each card, not yet implemented -->
+				<div class="card medium lighten-2 white-text alt-color-{{ forloop.index }} modal-trigger" data-target="detail-{{ forloop.index }}">
 					<div class="card-image work-{{ forloop.index }}">
-						<!--I'd like to define images in the css, rather than using <img>
-						<img src="/img/IMG-20150608-WA0004.jpg" alt="">-->
+						<!--I'd like to define images in the css, rather than using <img>-->
+						
 					</div>
 					<div class="card-content deep-orange lighten-2 valign-wrapper">
-						<p class="small-text valign">{{ work.project }}</p><i class="mdi-navigation-more-vert small right"></i>
+						<p class="small-text valign">{{ work.project }}</p>
 					</div>
 					<div class="title-overlay center-align">
 						<strong class="title-text">{{ work.title }}</strong>
@@ -18,6 +20,24 @@
 					</div>
 				</div>
 			</div>
+					{% else %}
+			<div class="col s12 m6 l4">
+				<!-- I thought it would be nice with different color for each card, not yet implemented -->
+				<div class="card medium lighten-2 white-text alt-color-{{ forloop.index }} modal-trigger" data-target="detail-{{ forloop.index }}">
+					<div class="card-image work-{{ forloop.index }}">
+						<!--I'd like to define images in the css, rather than using <img>-->
+						
+					</div>
+					<div class="card-content deep-orange lighten-2 valign-wrapper">
+						<p class="small-text valign">{{ work.project }}</p>
+					</div>
+					<div class="title-overlay center-align">
+						<strong class="title-text">{{ work.title }}</strong>
+						<i class="icon mdi-action-search small valign"></i>
+					</div>
+				</div>
+			</div>
+				{% endif %}
 			{% endfor %}
 
 		</div>
