--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -1,3 +1,7 @@
+/* This is for the main section of the page,
+	 All contents (except the footer) are arranged 
+	 in sections inside the main-content class.*/
+
 /* Change base color & layout */
 html
 	font-family: $base-font !important
@@ -43,6 +47,14 @@ section
 		text-align: justify
 		font-weight: 200
 
+@media screen and (max-width: 600px)
+	.summary
+		.about
+			text-align: left
+	
+	.footer-copyright
+		font-size: 0.7em
+
 #more
 	text-align: justify
 
@@ -51,10 +63,9 @@ section
 
 /* Footer */
 
-footer
-	.page-footer
-		margin-top: 0 !important
-		padding-top: 40px !important
+.page-footer
+	margin-top: 0 !important
+	padding-top: 40px !important
 	
 	li
 		display: inline
