--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -39,7 +39,7 @@
     width: 100px
     height: 100px
     border: 4px solid #fff
-    border-radius: 50%
+    border-radius: 15px
     float: left
 
   h1 
