edit summary, footer, skill

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
-				<h5 class="white-text">This site is generated using <a href="http://jekyllrb.com" class="blue-grey-text lighten-2">Jekyll</a>. Download the source code <a href="{{ site.data.settings.github }}/thegreyside.github.io" class="black-text">here</a> and <a href="{{ site.data.settings.github }}/materializecss_online_resume_jekyll" class="black-text">here (the Jekyll version)</a>. It's free!</h5>
+				<h5 class="white-text">About this page</h5><p class="white-text">This site is generated using <a href="http://jekyllrb.com" class="black-text">Jekyll</a> and <a href="http://saas-lang.com" class="black-text">SASS</a>. Download the source code <a href="{{ site.data.settings.github }}/materializecss_online_resume_jekyll" class="black-text"><strong>here</strong></a> OR if you prefer the finished result, download <a href="{{ site.data.settings.github }}/thegreyside.github.io" class="black-text"><strong>here</strong></a>. It's free!</p>
 				
 			</div>
 			<div class="col l4 offset-l2 s12">
@@ -14,13 +14,16 @@
 					<li>
 						<a href="{{ site.data.settings.twitter }}" class="white-text"><i class="fa fa-twitter-square fa-3x"></i></a>
 					</li>
+					<li>
+						<a href="{{ site.data.settings.github }}" class="white-text"><i class="fa fa-github-square fa-3x"></i></a>
+					</li>
 				</ul>
 			</div>
 		</div>
 	</div>
 	<div class="footer-copyright">
 		<div class="container">
-			<a rel="license" href="http://creativecommons.org/licenses/by/4.0/" class="black-text">Creative Commons Attribution 4.0 International License</a>.
+			<a rel="license" href="http://creativecommons.org/licenses/by/4.0/" class="white-text">Creative Commons Attribution 4.0 International License</a>
 		</div>
 	</div>
 </footer>
