--- a/css/resume.sass
+++ b/css/resume.sass
@@ -8,6 +8,7 @@ $small-text: 0.9em
 $font-family: unquote("Open+Sans:400,300,700,800|Roboto+Slab:400,300,700,100")
 @import url("https://fonts.googleapis.com/css?family=#{$font-family}")
 $base-font: "Open Sans", sans-serif
+$alt-font: "Roboto Slab"
 $heading-font: "Open Sans", sans-serif
 
 @import banner
