remove !important in css and compress images in work section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 	<div class="navbar-fixed">
 		<nav id="menu">
 			<div class="nav-wrapper blue-grey darken-1">
-				<a href="#" class="brand-logo"><span class="deep-orange-text text-lighten-2">{{ site.data.settings.subtitle-1 }}</span> & <span class="grey-text">{{ site.data.settings.subtitle-2 }}</span></a>
+				<a href="#" class="brand-logo site-title"><span class="deep-orange-text text-lighten-2">{{ site.data.settings.subtitle-1 }}</span> & <span class="grey-text">{{ site.data.settings.subtitle-2 }}</span></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					{% for menu in site.data.resume.menus %}
 					<li><a href="{{ menu.url }}" class="blue-grey darken-1 deep-orange-text text-lighten-2">{{ menu.name }}</a>
