--- a/_sass/_banner.sass
+++ b/_sass/_banner.sass
@@ -1,11 +1,11 @@
 /* Banner */
 
-.brand-logo
-	padding: 0 15px !important
+.brand-logo.site-title
+	padding: 0 15px
 
 @media screen and (max-width: 400px)
-	.brand-logo
-		font-size: 20px !important
+	.brand-logo.site-title
+		font-size: 20px
 
 .banner
 	position: fixed
