--- a/_sass/_contact.sass
+++ b/_sass/_contact.sass
@@ -9,18 +9,17 @@
 .input-field input[type=text]:focus + label,
 .input-field input[type=email]:focus + label,
 .input-field textarea.materialize-textarea:focus + label
-  color: $accent-color !important
+  color: $accent-color
 
 .input-field input[type=text]:focus,
 .input-field input[type=email]:focus,
 .input-field textarea.materialize-textarea:focus
-  border-bottom: 1px solid $accent-color !important
-  box-shadow: 0 1px 0 0 $accent-color !important
+  border-bottom: 1px solid $accent-color
+  box-shadow: 0 1px 0 0 $accent-color
 
 /* icon prefix focus color */
 .input-field .prefix.active
-  color: #ff5722 !important
-
+  color: #ff5722
 
 @media screen and (max-width: 360px)
   #contact
