--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -4,7 +4,7 @@
 
 /* Change base color & layout */
 html
-	font-family: $base-font !important
+	font-family: $base-font
 
 
 //h1,h2,h3,h4,h5,h6
@@ -30,7 +30,7 @@ section
 	margin-top: 380px
 
 //.alt-bg
-//	background: white !important
+//	background: white
 //	//background-image: linear-gradient(to top, #e6dddd, rgba(90, 86, 86, 0.47))
 
 
@@ -41,7 +41,7 @@ section
 	
 .summary
 	border-radius: 3px
-	padding: 10px 20px !important
+	padding: 10px 20px
 
 	.about
 		text-align: justify
@@ -63,9 +63,9 @@ section
 
 /* Footer */
 
-.page-footer
-	margin-top: 0 !important
-	padding-top: 40px !important
+.page-footer.no-margin
+	margin-top: 0
+	padding-top: 40px
 	
 	li
 		display: inline
