--- a/_sass/_skill.sass
+++ b/_sass/_skill.sass
@@ -38,7 +38,7 @@
 	
 // Additional footer info //
 div.container p.small-text
-	font-size: $small-text !important
+	font-size: $small-text
 	
 @media screen and (max-width: 360px)
 	.skill-type
