--- a/_sass/_work.sass
+++ b/_sass/_work.sass
@@ -21,9 +21,9 @@ div.card.medium
 	overflow: hidden
 	cursor: pointer
 
-	.card-content
-		height: 100px !important
-		padding: 20px !important
+	.card-content.smaller
+		height: 100px
+		padding: 20px
 		text-align: justify
 	
 	.title-overlay
