--- a/_includes/work.html
+++ b/_includes/work.html
@@ -11,7 +11,7 @@
 						<!--I'd like to define images in the css, rather than using <img>-->
 						
 					</div>
-					<div class="card-content deep-orange lighten-2 valign-wrapper">
+					<div class="card-content smaller deep-orange lighten-2 valign-wrapper">
 						<p class="small-text valign">{{ work.project }}</p>
 					</div>
 					<div class="title-overlay center-align">
@@ -28,7 +28,7 @@
 						<!--I'd like to define images in the css, rather than using <img>-->
 						
 					</div>
-					<div class="card-content deep-orange lighten-2 valign-wrapper">
+					<div class="card-content smaller deep-orange lighten-2 valign-wrapper">
 						<p class="small-text valign">{{ work.project }}</p>
 					</div>
 					<div class="title-overlay center-align">
