--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
-				<h5 class="white-text">About this page</h5><p class="white-text">This site was generated using <a href="http://jekyllrb.com" class="black-text">Jekyll</a> and <a href="http://saas-lang.com" class="black-text">SASS</a>. Download the raw files <a href="{{ site.data.settings.github }}/materializecss_online_resume_jekyll" class="black-text"><strong>here</strong></a> OR if you prefer the finished result, download them <a href="{{ site.data.settings.github }}/thegreyside.github.io" class="black-text"><strong>here</strong></a>.</p>
+				<h5 class="white-text">About this site</h5><p class="white-text">This site was generated using <a href="http://jekyllrb.com" class="black-text">Jekyll</a> and <a href="http://saas-lang.com" class="black-text">SASS</a>. Download the raw files <a href="{{ site.data.settings.github }}/materializecss_online_resume_jekyll" class="black-text"><strong>here</strong></a> OR if you prefer the finished result, download them <a href="{{ site.data.settings.github }}/thegreyside.github.io" class="black-text"><strong>here</strong></a>.</p>
 				
 			</div>
 			<div class="col l4 offset-l2 s12">
