--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 				
 			</div>
 			<div class="col l4 offset-l2 s12">
-				<h5 class="white-text">Connect with me</h5>
+				<h5 class="white-text">Connect with me:</h5>
 				<ul>
 					<li>
 						<a href="{{ site.data.settings.linkedin }}" class="white-text"><i class="fa fa-linkedin-square fa-3x"></i></a>
