--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,6 +1,6 @@
-<section id="work" class="alt-color">
+<section id="employment" class="alt-color">
 	<div class="container">
-		<h6 class="accent-color center-align">Works</h6>
+		<h6 class="accent-color center-align">Employment</h6>
 		<div class="row">
 			{% for work in site.data.resume.works %}
 				{% if forloop.first %}
